# snatchit-api

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/admin/: routes.py
app/api/routes/: auth.py  categories.py  favourites.py  home.py  notifications.py  offers.py  subscriptions.py  vendors.py
app/core/: config.py  phone.py  security.py
app/models/: __init__.py  category.py  notification.py  offer.py  slider.py  subscription.py  transaction.py  user.py  vendor.py
app/schemas/: home.py
app/services/: fcm.py
migrations/: env.py
migrations/versions/: 147458278fe6_add_active_time_to_offers.py  1bb02fcf1eea_initial.py  67364a2f60b2_update_offers_schema.py  6c96396e4aae_update_models.py  838184a7b707_add_image_and_product_id_to_.py  a3f9c2d1b4e5_add_deep_link_to_notifications.py
